ci: reduce GitHub Actions resource consumption (Steps 1-8)
- Step 1: Add paths-ignore filters to Build (commented, ready for re-enable)
- Step 2: Remove Windows from Build matrix (kept in manual CI workflow)
- Step 3: Add timeout-minutes to all jobs across all workflows
- Step 4: Reduce artifact retention (5d packages, 3d Docker, 7d bench/coverage)
- Step 5: Add fast check gate (fmt+clippy+check) before build matrix
- Step 6: Conditional Docker build via dorny/paths-filter
- Step 7: Create lint.yml as only automatic workflow; Build now manual
- Step 8: Add save-always to Swatinem/rust-cache in setup-pgrx

Estimated savings: ~93% reduction in automatic CI minutes per push.
See plans/infra/GITHUB_ACTIONS_COST.md for details.

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -34,6 +34,7 @@ jobs:
   benchmark:
     name: Criterion benchmarks
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
 
@@ -53,7 +54,7 @@ jobs:
           path: |
             bench-output.txt
             target/criterion/
-          retention-days: 30
+          retention-days: 7
           if-no-files-found: ignore
 
       # ── Install Bencher CLI ─────────────────────────────────────────────
