--- a/.github/actions/setup-pgrx/action.yml
+++ b/.github/actions/setup-pgrx/action.yml
@@ -26,6 +26,7 @@ runs:
       uses: Swatinem/rust-cache@v2
       with:
         cache-on-failure: true
+        save-always: true
         # Include pgrx version in key so cache is invalidated on pgrx upgrade
         prefix-key: v0-rust-pgrx0.17
 
