--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
   unit-tests:
     name: Unit tests (${{ matrix.artifact_suffix }})
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
     continue-on-error: ${{ matrix.os == 'windows-2022' }}
     strategy:
       fail-fast: false
@@ -56,6 +57,7 @@ jobs:
   integration-tests:
     name: Integration tests
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
 
@@ -79,6 +81,7 @@ jobs:
   e2e-tests:
     name: E2E tests
     runs-on: ubuntu-latest
+    timeout-minutes: 25
     steps:
       - uses: actions/checkout@v4
 
@@ -95,6 +98,7 @@ jobs:
   benchmarks:
     name: Benchmarks
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     continue-on-error: true
     steps:
       - uses: actions/checkout@v4
@@ -111,13 +115,14 @@ jobs:
         with:
           name: benchmark-results
           path: target/criterion/
-          retention-days: 14
+          retention-days: 7
           if-no-files-found: ignore
 
   # ── CloudNativePG smoke test (non-blocking, Linux only) ─────────────────
   cnpg-smoke-test:
     name: CNPG smoke test
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     continue-on-error: true
     steps:
       - uses: actions/checkout@v4
