--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
   build-release:
     name: Build (${{ matrix.artifact_suffix }})
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
     continue-on-error: ${{ matrix.os == 'windows-2022' }}
     strategy:
       fail-fast: false
@@ -143,6 +144,7 @@ jobs:
     name: Test release artifact
     needs: build-release
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
 
@@ -201,6 +203,7 @@ jobs:
     name: Publish GitHub Release
     needs: [build-release, test-release]
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
 
@@ -238,6 +241,7 @@ jobs:
     name: Publish Docker image
     needs: [build-release, test-release]
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
 
