fix: rename stale pgdt identifiers to match actual code
All documentation, source code, and scripts referenced the old 'pgdt' naming
convention (pgdt_hash, PgdtError, __pgdt_row_id, pgdt_cdc_*, etc.) which was
renamed to the current 'pg_stream' / 'pgs' convention during development.

Mapping applied across 19 files:
- Schema: pgdt → pgstream
- Error type: PgdtError → PgStreamError
- Shared state: PgdtSharedState → PgStreamSharedState
- Triggers: pgdt_cdc_* → pg_stream_cdc_*
- Hash functions: pgdt_hash* → pg_stream_hash*
- Columns: __pgdt_* → __pgs_*
- Alert channel: pgdt_alert → pg_stream_alert
- Log prefix: [PGDT] → [pg_stream]
- Env vars: PGDT_E2E_* → PGS_E2E_*

--- a/tests/Dockerfile.e2e-coverage
+++ b/tests/Dockerfile.e2e-coverage
@@ -110,7 +110,7 @@ RUN mkdir -p /coverage && chmod 777 /coverage
 
 # Tell the LLVM runtime to write profraw files into /coverage.
 # %p = PID, %m = binary signature hash — avoids collisions across processes.
-ENV LLVM_PROFILE_FILE="/coverage/pgdt-%p-%m.profraw"
+ENV LLVM_PROFILE_FILE="/coverage/pgs-%p-%m.profraw"
 
 # Configure shared_preload_libraries
 RUN echo "" >> /usr/share/postgresql/postgresql.conf.sample && \
