--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 .idea/
-/target
+target
 *.iml
 **/*.rs.bk
 tests/pg_regress/results
@@ -8,6 +8,6 @@ tests/pg_regress/regression.diffs
 tests/pg_regress/regression.out
 
 # Code coverage
-/coverage/
+coverage/
 *.profraw
 *.profdata
