--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 xxhash-rust = { version = "0.8", features = ["xxh64"] }
 thiserror = "2"
+sha2 = "0.10"
 croner = "3"
 chrono = "0.4"
 
