--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,9 +28,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install mdBook
+        env:
+          MDBOOK_VERSION: "0.4.44"
         run: |
           curl -sSL \
-            https://github.com/rust-lang/mdBook/releases/latest/download/mdbook-x86_64-unknown-linux-gnu.tar.gz \
+            "https://github.com/rust-lang/mdBook/releases/download/v${MDBOOK_VERSION}/mdbook-v${MDBOOK_VERSION}-x86_64-unknown-linux-gnu.tar.gz" \
             | tar -xz -C ~/.cargo/bin
 
       - name: Build documentation
