fix(ci): add Linux linker flag to allow undefined PG symbols in test binaries
On macOS, -Wl,-undefined,dynamic_lookup already defers resolution of
PostgreSQL server symbols (SPI_connect, CurrentMemoryContext, etc.)
to runtime. On Linux with lld (Rust's default linker), undefined
symbols in test executables are a hard link-time error.

Add the Linux equivalent: -Wl,--unresolved-symbols=ignore-all so that
'cargo test --lib --features pg18' links successfully. The pure-Rust
unit tests never actually call any PG symbols at runtime — they are
only referenced by unreachable pgrx FFI wrappers that the linker sees.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,10 @@
 [target.'cfg(target_os="macos")']
 # Postgres symbols won't be available until runtime
 rustflags = ["-Clink-arg=-Wl,-undefined,dynamic_lookup"]
+
+[target.'cfg(target_os="linux")']
+# Postgres symbols (SPI_connect, CurrentMemoryContext, etc.) are provided by
+# the postgres executable at runtime when the .so is loaded. For cargo test
+# --lib (which builds a standalone executable), lld rejects undefined symbols
+# at link time. Tell lld to defer resolution, mirroring macOS dynamic_lookup.
+rustflags = ["-Clink-arg=-Wl,--unresolved-symbols=ignore-all"]
