fix: use pg_stub LD_PRELOAD on Linux to fix unit test symbol resolution
Newer Linux runners (Ubuntu 24.04) eagerly resolve symbols like macOS 26.
The pgrx test binary links PostgreSQL server symbols that don't exist
outside a running postgres process.

- run_unit_tests.sh: always build and preload pg_stub on all platforms
  (LD_PRELOAD on Linux, DYLD_INSERT_LIBRARIES on macOS)
- ci.yml: use run_unit_tests.sh for Linux/macOS, bare cargo test for Windows
- coverage.yml: build libpg_stub.so and set LD_PRELOAD for cargo llvm-cov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,12 @@ jobs:
       - name: Setup pgrx environment
         uses: ./.github/actions/setup-pgrx
 
-      - name: Run unit tests
+      - name: Run unit tests (Linux / macOS)
+        if: runner.os != 'Windows'
+        run: ./scripts/run_unit_tests.sh pg18
+
+      - name: Run unit tests (Windows)
+        if: runner.os == 'Windows'
         run: cargo test --lib --features pg18
 
   # ── Integration tests (testcontainers, Linux only) ──────────────────────
