fix: add Cargo.toml metadata and eliminate unwrap() in SQL-reachable code
- Cargo.toml: add repository, homepage, readme, keywords, categories
- monitor.rs: replace all .unwrap() calls on SPI results and row.get()
  with .map_err()/error!() for SPI selects, .unwrap_or(None) for columns
- dag.rs: replace 3 .unwrap() calls in resolve_calculated_schedule and
  topological_sort_inner with if-let guards (per AGENTS.md convention)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 edition = "2024"
 description = "Streaming Stream Tables for PostgreSQL 18 with differential view maintenance"
 license = "Apache-2.0"
+repository = "https://github.com/grove/pg-stream"
+homepage = "https://github.com/grove/pg-stream"
+readme = "README.md"
+keywords = ["postgresql", "streaming", "materialized-view", "incremental", "pgrx"]
+categories = ["database"]
 
 # Allow pgrx internal cfg values used by pg_shmem_init! macro
 [lints.rust]
