--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -42,3 +42,8 @@ jobs:
         uses: rustsec/audit-check@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          # RUSTSEC-2023-0071: rsa Marvin Attack — pulled in transitively via
+          # sqlx -> sqlx-mysql -> rsa, but pg_stream only uses the "postgres"
+          # feature of sqlx. sqlx-mysql is never compiled into the extension.
+          # Suppress until an upstream fix is available.
+          arguments: --ignore RUSTSEC-2023-0071
