fix(ci): fix security audit permissions — checks:write not issues:write
rustsec/audit-check@v2 creates a GitHub Check Run to annotate results,
which requires checks:write. The previous issues:write was incorrect
and caused 'Resource not accessible by integration' errors.

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -28,7 +28,7 @@ on:
 
 permissions:
   contents: read
-  issues: write  # rustsec/audit-check posts PR annotations
+  checks: write  # rustsec/audit-check posts results as a GitHub Check Run
 
 jobs:
   audit:
