--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -46,4 +46,4 @@ jobs:
           # sqlx -> sqlx-mysql -> rsa, but pg_stream only uses the "postgres"
           # feature of sqlx. sqlx-mysql is never compiled into the extension.
           # Suppress until an upstream fix is available.
-          arguments: --ignore RUSTSEC-2023-0071
+          ignore: RUSTSEC-2023-0071
